# optica-shalom

./: .env.example  .gitignore  README.md  app.py  oauth_credentials.json  pyproject.toml
